# CVCreatorMain

./: .gitignore  .releaserc.cjs  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  storage.rs
apps/desktop/src-tauri/windows/: sign-cvcreator.ps1
apps/desktop/src/app/: App.tsx  AppShell.tsx
apps/desktop/src/features/command-bar/: CommandBar.tsx
apps/desktop/src/features/context-menu/: ContextMenu.tsx
apps/desktop/src/features/editor/: EditorWorkspace.tsx
apps/desktop/src/features/export/: exportPdf.ts
apps/desktop/src/features/inspector/: InspectorPanel.tsx  RichTextEditor.tsx
apps/desktop/src/features/preview/: PreviewPane.tsx
apps/desktop/src/features/section-library/: SectionLibrary.tsx
apps/desktop/src/features/state/: documentFiles.ts  persistence.ts  useResumeBuilder.ts
apps/desktop/src/styles/: global.css
docs/: IMPLEMENTATION_PLAN.md
scripts/release/: sync-version.mjs
scripts/windows/: build-release.ps1  new-self-signed-cert.ps1
