[package]
name = "cvcreator-desktop"
version = "1.1.1"
description = "Desktop runtime for CVCreator"
authors = ["GitHub Copilot"]
edition = "2021"

[lib]
name = "cvcreator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
